# any_list

./: .gitignore  README.md  com.luzynski.anylist.metainfo.xml  com.luzynski.anylist.yml  justfile  modules.yml
.github/workflows/: rust.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.github/workflows/: Rust.yml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/schemas/: acl-manifests.json  capabilities.json
src-tauri/src/: main.rs
