[package]
name = "any_list"
version = "1.1.3"
description = "A Tauri wrapper around AnyList.com. Requires subscription to use."
authors = ["Steve Luzynski"]
license = "MIT"
repository = "https://github.com/sluzynsk/any_list"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["shell-open", "system-tray"] }
url = "2.3.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
