[package]
name = "any_list"
version = "1.2.0"
description = "A Tauri wrapper around AnyList.com. Requires subscription to use."
authors = ["Steve Luzynski"]
license = "MIT"
repository = "https://github.com/sluzynsk/any_list"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
url = "^2.3.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = "2.0.0-beta.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
