[package]
name = "any_list"
version = "1.3.0"
description = "A Tauri wrapper around AnyList.com. Requires subscription to use."
authors = ["Steve Luzynski"]
license = "MIT"
repository = "https://github.com/sluzynsk/any_list"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
